--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,7 @@ out/
 *.ear
 
 # User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/misc.xml
-.idea/jsLibraryMappings.xml
+.idea/
 
 # File-based project format:
 *.iws
